# demotivator

./: .editorconfig  LICENSE  README.md  demotivate.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
demotivate/: __init__.py  __main__.py  demotivator.py  utils.py
demotivator/: __init__.py  __main__.py  indent.py  typing.py
tests/: test_demotivator.py  test_indent.py  test_load.py  test_utils.py
