[metadata]
classifiers =
    Programming Language :: Python :: 3.10
description = Everyone loves memes. So why dont you create your own?
licence = MIT
long_description = file: README.md, LICENCE
name = demotivate
version = attr: demotivate.__version__

[options]
install_requires =
    Pillow
    click
    requests
    typing_extensions
packages = demotivate
python_requires = >=3.10.1

[optins.entry_points]
console_scripts =
    demotivate = demotivate.main:create_demotivator
